--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -1885,18 +1885,79 @@ This specification does not require or request any change to any other OMG speci
 \subsection{Submitting and supporting organizations}
 The following  OMG  submitted and/or supported parts of this specification:
 	\begin{itemize}
-		\item 
+		\item Fraunhofer FOKUS
+		\item Methodeutic, LLC. 
+		\item MITRE		
+		\item Otto von Guericke University of Magdeburg
+		\item Thematix Partners LLC
 	\end{itemize}
 
 \subsection{Participants}
 The following people contributed directly to the development of this specification. 
-
 	\begin{itemize}
-		\item 
+	\item Tara Athan
+	\item Conrad Bock 
+	\item Mihai Codescu
+	\item Maria Keet
+	\item Christoph Lange 
+	\item Terry Longstreth 	
+	\item Fabian Neuhaus 
+	\item Till Mossakowski 	
+	\item Elisa Kendall 
+	\item Michael Gruninger 
+	\item Oliver Kutz 
 	\end{itemize}
-	
-
-%\section{Proof of Concept}
+%	
+%For advice and support we thank 	
+%	\begin{itemize}
+%		\item Guadalupe Aguado 
+%		\item Gerhard Budin 
+%		\item Carmen Chui
+%		\item Frank Farance
+%		\item Carla Freericks 
+%		\item Christian Galinski
+%		\item Dan Gillman 
+%		\item Andreas Hoffmann 
+%		\item Dosam Hwang		
+%		\item Adrian Paschke 
+%		\item Doug Lawrence		
+%		\item Bodil Nistrup Madsen 
+%		\item Alan Melby 
+%		\item Antonio Pareja
+%		\item Catherine Protic 
+%
+%		\item Gerald Radack
+%		\item Christophe Roche
+%		\item Sebastian Rudolph
+%		\item Davide Sottara 
+%		\item Changqing Zhou
+%		
+%
+%		\item Hanne Erdman Thomsen
+%		\item  Harold Solbrig 
+%		\item Gottfried Herzog
+%		\item Jerome Euzenat
+%		\item John Bateman 
+%		\item John Sowa
+%		\item Kiyong Lee 
+%		\item Laurette Pretorius
+%		\item Leo Obrst
+%		\item Maria Pozzi
+%		\item Mari Carmen Suarez Figueroa
+%		\item Melanie Maradan
+%		\item Michael Wagner
+%		\item Sue Ellen Wright
+%		\item Monte George 
+%		\item Pat Hayes
+%		\item Pierre Yves Schobbens 
+%		\item Edmund Skoviak 
+%		\item Peter Yim 				
+%		\item Stefano Borgo 
+%		\item Sylvie Arbouy 
+%		\item Tommie Meyer 
+%		\item Yonghong Cheng
+%	\end{itemize}
+%		
 
 
 
