added references for close #31

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -2135,9 +2135,8 @@ medical ontology. (See \ednote{CL: can we please have a vector graphic here?}\fr
 \section{Use case Onto-4: Interoperability between closed-world data and open-world metadata}
 Data collection has become easier and much more widespread over the years. This data has to be assigned a meaning somehow, which occurs traditionally in the 
 form of metadata annotations. For instance, consider geographical datasets derived from satellite data and raw sensor readings. Current implementations in, e.g., 
-ecological economics\ednote{Tara: add reference. Tara says: e.g. ecological economics
-http://www.ariesonline.org/docs/ARIESModelingGuide1.0.pdf attempts to standardize http://inspire-geoportal.ec.europa.eu/} require manual annotation of datasets with the information relevant for their processes. While there have been attempts to standardize such 
-information, metadata for datasets of simulation results are more difficult to standardize. Moreover, it is resource-consuming to link the data to the metadata, to 
+ecological economics\cite{bagstad_aries_2011} require manual annotation of datasets with the information relevant for their processes. While there have been attempts to standardize such 
+information\cite{european_comission_inspire_2014}, metadata for datasets of simulation results are more difficult to standardize. Moreover, it is resource-consuming to link the data to the metadata, to 
 ensure the metadata itself is of good quality and consistent, and to actually exploit the metadata when querying the data for data analysis. 
 
 The data is usually represented in a database or RDF triple store, which work with a closed world assumption on the dataset, and are not expressive enough to 
