--- a/Standard/dol.bib
+++ b/Standard/dol.bib
@@ -413,3 +413,21 @@ We distinguish three kinds of heterogeneity:
 (3) heterogeneous specifications distributed over a number of logics.},
   status = {Reviewed}
 }
+
+@techreport{bagstad_aries_2011,
+    type = {{ARIES technical report}},
+	title = {{ARIES} – Artificial Intelligence for Ecosystem Services: A guide to models and data , version 1.0},
+	note ={\url{http://ariesonline.org/docs/ARIESModelingGuide1.0.pdf}},
+	number = {1},
+	author = {Bagstad, Kenneth J. and Villa, Ferdinando and Johnson, Gary W. and Voigt, B.},
+	year = {2011},
+	pages = {126}
+}
+
+@misc{european_comission_inspire_2014,
+	title = {{INSPIRE} Geoportal: Enhancing access to European spatial data},
+	note = {\url{http://inspire-geoportal.ec.europa.eu/}},
+	urldate = {2014-10-16},
+	author = {European Comission},
+	year = {2014},
+}
