--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -1752,7 +1752,8 @@ the notion of a \termref{logic}}
 \termdefinition{sublogic}{a \termref{logic} that is a syntactic restriction of another logic, inheriting its semnatics}
 
 \red{
-\termdefinition{logic graph}{graph of \termref{logics}, \termref{logic translations} and \termref{logic reductions}, typically used in a \termref{heterogeneous environment}}
+\termdefinition{logic graph}{graph of \termref{logics}, \termref{logic 
+translations} and \termref{logic reductions}, typically used in a \termref{heterogeneous environment}}
 \begin{note}
   In a logic graph, some of the logic translations and reductions can be
   marked to be \termref{default translations}.
@@ -1883,29 +1884,35 @@ This specification does not require or request any change to any other OMG speci
 
 \section{Acknowledgments}
 \subsection{Submitting and supporting organizations}
-The following  OMG  submitted and/or supported parts of this specification:
+The following  OMG  members are submitting this specification:
 	\begin{itemize}
 		\item Fraunhofer FOKUS
-		\item Methodeutic, LLC. 
 		\item MITRE		
-		\item Otto von Guericke University of Magdeburg
 		\item Thematix Partners LLC
 	\end{itemize}
+The following organizations are supporting this specification: 
+	\begin{itemize}
+		\item Otto-von-Guericke University Magdeburg 
+		\item 
+	\end{itemize}
+
+
+
 
 \subsection{Participants}
 The following people contributed directly to the development of this specification. 
 	\begin{itemize}
-	\item Tara Athan
-	\item Conrad Bock 
-	\item Mihai Codescu
-	\item Maria Keet
-	\item Christoph Lange 
-	\item Terry Longstreth 	
-	\item Fabian Neuhaus 
-	\item Till Mossakowski 	
-	\item Elisa Kendall 
-	\item Michael Gruninger 
-	\item Oliver Kutz 
+	\item Tara Athan, Independent Consultant 
+	\item Conrad Bock, National Institute of Standards and Technology  
+	\item Mihai Codescu, Otto-von-Guericke University Magdeburg 
+	\item Maria Keet, University of Cape Town 
+	\item Christoph Lange, University of Bonn 
+	\item Terry Longstreth, Independent Consultant 	
+	\item Fabian Neuhaus, Otto-von-Guericke University Magdeburg  
+	\item Till Mossakowski, Otto-von-Guericke University Magdeburg  	
+	\item Elisa Kendall,  Thematix Partners LLC
+	\item Michael Gruninger, University of Toronto  
+	\item Oliver Kutz, Otto-von-Guericke University Magdeburg  
 	\end{itemize}
 %	
 %For advice and support we thank 	
