section 8 introduction generalised to OMS (not just ontologies)

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -1893,7 +1893,7 @@ The following  OMG  members are submitting this specification:
 The following organizations are supporting this specification: 
 	\begin{itemize}
 		\item Otto-von-Guericke University Magdeburg 
-		\item 
+		\item Athan Services 
 	\end{itemize}
 
 
@@ -1902,7 +1902,7 @@ The following organizations are supporting this specification:
 \subsection{Participants}
 The following people contributed directly to the development of this specification. 
 	\begin{itemize}
-	\item Tara Athan, Independent Consultant 
+	\item Tara Athan, Athan Services 
 	\item Conrad Bock, National Institute of Standards and Technology  
 	\item Mihai Codescu, Otto-von-Guericke University Magdeburg 
 	\item Maria Keet, University of Cape Town 
@@ -2366,7 +2366,7 @@ We give an overview of the most important and innovative language
 constructs of DOL. Details can be found in clause~\ref{c:abstract-syntax}.
 
 
-DOL gives interoperability a formal grounding and makes heterogeneous OMS and OMS networks and services based on them amenable to checking of coherence (e.g. consistency, conservativity, intended consequences, and compliance). OMS languages are declarative languages for making ontological distinctions formally precise.\ednote{generalize to OMS} They are distinguished by the following features:
+DOL gives interoperability a formal grounding and makes heterogeneous OMS and OMS networks and services based on them amenable to checking of coherence (e.g. consistency, conservativity, intended consequences, and compliance). OMS languages are declarative languages for making ontological distinctions formally precise, for modelling a domain in an unambiguous way, or for expressing algebraic specifications of software.   OMS languages are distinguished by the following features:
 
 \begin{description}
 \item[Logic] Most commonly, OMS languages are based on a description logic or some other subset of first-order logic, but in some cases, also higher-order, modal, paraconsistent and other logics are used.
@@ -2375,7 +2375,7 @@ DOL gives interoperability a formal grounding and makes heterogeneous OMS and OM
 \end{description}
 Whereas the first feature determines the expressivity of the language and the possibilities for automated reasoning (decidability, tractability, etc.), the latter two intend to facilitate OMS engineering as well as the engineering of OMS-based software.
 
-Acknowledging the wide tool support that conforming established languages such as OWL or Common Logic enjoy, existing OMS in these languages remain as they are within the DOL framework. DOL enhances their modularity and annotation facilities to a superset of the modularity and annotation facilities they provide themselves. DOL's modularity and annotation constructs can either be embedded into existing OMS as non-disruptive annotations, or they can be provided as standoff markup, pointing to the OMS they talk about; DOL specifies a syntax and semantics for both variants. DOL's modularity constructs are semantically well-founded within a library of formal relationships between the logics underlying the different supported OMS languages.
+Acknowledging the wide tool support that conforming established languages such as OWL, Common Logic, MOF, or CASL\ednote{review language list when annexes are finished} enjoy, existing OMS in these languages remain as they are within the DOL framework. DOL enhances their modularity and annotation facilities to a superset of the modularity and annotation facilities they provide themselves. DOL's modularity and annotation constructs can either be embedded into existing OMS as non-disruptive annotations, or they can be provided as standoff markup, pointing to the OMS they talk about; DOL specifies a syntax and semantics for both variants. DOL's modularity constructs are semantically well-founded within a library of formal relationships between the logics underlying the different supported OMS languages.
 
 
 \section{Overview of DOL}\label{c:req:overview}
