--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -1906,7 +1906,7 @@ The following people contributed directly to the development of this specificati
 	\item Conrad Bock, National Institute of Standards and Technology  
 	\item Mihai Codescu, Otto-von-Guericke University Magdeburg 
 	\item Maria Keet, University of Cape Town 
-	\item Christoph Lange, University of Bonn 
+	\item Christoph Lange, University of Bonn and Fraunhofer IAIS
 	\item Terry Longstreth, Independent Consultant 	
 	\item Fabian Neuhaus, Otto-von-Guericke University Magdeburg  
 	\item Till Mossakowski, Otto-von-Guericke University Magdeburg  	
